# SAGE

./: .env  .env.example  .gitignore  .prettierrc  ALL.md  CLAUDE.md  FUCK.md  GEMINI.md  QWEN.md  README.md  SCHEMA.md  TODO.md  contract-types.ts  ink.code-workspace  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.types.json  tsup.config.ts  typedoc.config.cjs  vitest.config.ts
.github/workflows/: update-readme.yml
DOCS/: AGENT_WORKFLOW.md  Contract-LEGACY.md  PACKAGE_DOCS.md  PACKAGE_README_TEMPLATE.md  PACKAGE_TODO_TEMPLATE.md  Package-Standards.md  README.md  README_GENERATION_SUMMARY.md
DOCS/archetypes/: Archivist.md  Delegator.md  Guardian.md  Librarian.md  Sage.md  Warden.md
DOCS/architecture/: Contracts.md  Valve.md  Vault-Warden-Protocol.md
DOCS/core-concepts/: Lexicon.md  Manifesto.md  Principles.md
DOCS/guides/: Instant-Recall.md  Onboarding-Workflow.md  Relay.md
DOCS/principles/: Gnosis.md  Integrity.md  Noticing.md  Remembering.md  Secrets.md  Territorial-Gnosis.md
DOCS/protocols/: Bullet-Wound-Invariant.md  Committee-Formation.md  Post-Mortem-Protocol.md  Reconciliation.md  Transaction-Boundary.md  Unsafe-Protocol.md
DOCS/types/: index.html
apps/cli/: README.md  index.html  package.json  test-imports.js  tsconfig.json  tsdown.config.ts  (+2 more)
apps/valve/: Cargo.toml  README.md  TODO.md
apps/valve/src/: config.rs  control.rs  daemon.rs  main.rs  persona.rs  service.rs  state.rs  supervisor.rs  watch.rs
apps/valve/tests/: test-config.yml
fixtures/: README.md
scripts/: readme.js  update-readme.js
tools/: validate-monorepo.ts
(+271 files in other folders)
